fixed scrollbar issue for 125% scale screens and small adjustments for mobile

--- a/public/style.css
+++ b/public/style.css
@@ -18,6 +18,16 @@ html {
   scrollbar-width: none;
 }
 
+@media (-webkit-device-pixel-ratio: 1.25) {
+  .second-page-container, .third-page-container, .fourth-page-container, .fifth-page-container {
+    zoom: 0.8;
+  }
+
+  section {
+    height: 100vh;
+  }
+}
+
 @font-face {
   font-family: "StarFont";
   src: url("./fonts/StarFont-Regular.woff") format("woff");
@@ -201,6 +211,7 @@ section {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  min-height: 100vh;
   height: 100vh;
   height: calc(var(--vh, 1vh) * 100);
   transform: translateY(min(-4vh, -4vw));
